Updates batch script to better handle Java versions.